--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <title>Window Spawn and Move Cases</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+	<p>Window is lost when spawned with valid bounds</p>
+	<p><input type="button" id="btnSpawnLost" value="Lost on Spawn" /></p>
+	<p>Window is lost when spawned on one monitor and moved to another with different scaling</p>
+	<p><input type="button" id="btnMoveLost" value="Lost on Move" /></p>
+    <p>Window's bounds are doubled when spawned on one monitor and moved to another with different scaling</p>
+	<p><input type="button" id="btnMoveDouble" value="Positioned wrong on move" /></p>
+    <p>Working case. Window spawned on monitor then moved to the problem bounds on the same monitor</p>
+    <p><input type="button" id="btnMoveWorking" value="Working case" /></p>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
